--- a/BookStore.Web/Views/Shared/_LoginPartial.cshtml
+++ b/BookStore.Web/Views/Shared/_LoginPartial.cshtml
@@ -3,10 +3,6 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-@if (SignInManager.IsSignedIn(User))
-{
-    <h1>Hi</h1>
-}
 
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
@@ -15,7 +11,7 @@
             <a class="nav-link text-dark" asp-area="" title="Manage">Hello @User.Identity.Name !</a>
         </li>
         <li class="nav-item">
-            <form class="form-inline" asp-area="" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <form class="form-inline" asp-area="" asp-controller="Account" asp-action="LogOut">
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
@@ -26,7 +22,7 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignUp">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@Context.Request.Path">Login</a>
         </li>
     }
 </ul>
